<resources>
    <string name="app_name">PocEmployee</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="email_regex">^[a-z0-9._%-]+@[a-z0-9.-]+\\.[a-z]{2,4}$</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_short_password">This password is too short</string>
    <string name="error_invalid_password">This password should have 1 spl. character</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_help_message">"Valid email: user@mail.com\n Valid password : at least 8 characters long
        and has at least 1 special character "
    </string>
    <string name="local_db">DB</string>
    <string name="api">API</string>
    <string name="list_of_data_sources">Select the data source</string>
    <string name="employee_list_label">Employee List</string>
    <string name="local_db_refresh">Refresh DB</string>

    <!-- TODO: Add your Cognito pool details here -->
    <string name="cognito_web_domain">mock-user-pool.auth.us-east-2.amazoncognito.com</string>
    <string name="cognito_client_id">10pol84o6s1iv7tuduak9kqlr3</string>
    <string name="cognito_client_secret">71gqo0n326ts9bldic9hih3072gnlpa04gs9g9kn2u23fgkac40</string>
    <string name="app_redirect">mockapp://demo.cognitoauth1.com/signin</string>
    <string name="app_logout_redirect">mockapp://demo.cognitoauth1.com/signout</string>
    <string name="log_out">Log out</string>

</resources>
