<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_secondary_variant"
        android:padding="@dimen/activity_padding"
        tools:context=".ui.employeeData.DataSourceActivity">

    <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/data_source_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textAlignment="center"
                  android:textSize="@dimen/heading_text_size"
                  app:fontFamily="cursive"
                  android:layout_margin="@dimen/element_margin"
                  android:text="@string/list_of_data_sources"/>

        <Button android:id="@+id/db_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_source_button_bg"
                android:layout_margin="@dimen/element_margin"
                android:text="@string/local_db"/>

        <Button android:id="@+id/db_refresh_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_source_button_bg"
                android:layout_margin="@dimen/element_margin"
                android:text="@string/local_db_refresh"/>

        <Button android:id="@+id/api_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/data_source_button_bg"
                android:layout_margin="@dimen/element_margin"
                android:text="@string/api"/>
    </LinearLayout>
    <Button
            android:text="@string/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signout_button"
            android:background="@drawable/logout_button_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="signOut"/>

</androidx.constraintlayout.widget.ConstraintLayout>