<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding"
                tools:context=".ui.login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email_login_form"
            android:visibility="gone"/>


    <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/login_bg"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

       <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">

           <ImageButton android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_help"
                        android:background="@color/light_green_bg"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:src="@android:drawable/ic_menu_help"
                        android:onClick="showHelp"/>

           <Button
                   android:id="@+id/log_in_button"
                   style="?android:textAppearanceSmall"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@drawable/login_button_bg"
                   android:layout_alignParentEnd="true"
                   android:layout_alignParentRight="true"
                   android:text="@string/action_log_in"
                   app:fontFamily="cursive"
                   android:textColor="@color/design_default_color_surface"
                   android:textStyle="bold"/>
       </RelativeLayout>

    </LinearLayout>

</RelativeLayout>